Fixed collapsed button for extra small screens

--- a/recreation-2/src/Components/About/About.module.css
+++ b/recreation-2/src/Components/About/About.module.css
@@ -1,7 +1,8 @@
 .AboutDivRow {
     background: url("../../bg-about.jpg") no-repeat center;
-   background-color: black;
-   height: 460px;
+    background-color: black;
+    min-height: 460px;
+    width: 100%;
 }
 
 .AboutDiv {
@@ -12,7 +13,9 @@
 }
 
 .AboutDiv h1 {
-    margin: 40px 0px;
+    /* margin: 100px 0px; */
+    margin-top: 60px;
+    margin-bottom: 100px;
     color: white;
     font-family: audiowide-regular-webfront;
     font-size: 36px;
@@ -49,12 +52,18 @@
         padding-left:0;
         padding-right:0;
     }
+
+    .AboutDiv h1 {
+        margin-bottom: 50px;
+    }
 } 
 
 @media only screen and (max-width : 767.98px) {
-    .AboutDiv h1{
-        margin: 25px 0;
-    }
+    
+}
+
+@media only screen and (max-width : 575.98px) {
+    
 }
 
 
